Use vel_based_pos_traj_controller by default

--- a/ur3_moveit_config/config/controllers.yaml
+++ b/ur3_moveit_config/config/controllers.yaml
@@ -1,7 +1,8 @@
 controller_list:
-  - name: ""
+  - name: /vel_based_pos_traj_controller
     action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
+    default: true
     joints:
       - shoulder_pan_joint
       - shoulder_lift_joint
